// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-grid example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "background": "#21242c",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "center",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 150,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 5,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "display": "block",
              "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "lineHeight": "20px",
            }
          }
        >
          Cell (
          4 columns
           
          wide)
        </span>
        <br />
        <br />
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "relative",
              "textAlign": "right",
              "zIndex": 0,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            Gutter ⇢
          </span>
        </div>
        <br />
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "relative",
              "textAlign": "left",
              "zIndex": 0,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            Margin ⇢
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 150,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 5,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "display": "block",
              "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "lineHeight": "20px",
            }
          }
        >
          Cell (
          3 columns
           
          wide)
        </span>
        <br />
        <br />
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "zIndex": 0,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            ⇠ Gutters ⇢
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.4166666666666667 + 128px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.4166666666666667 + 128px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.4166666666666667 + 128px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.4166666666666667 + 128px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 150,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 5,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "display": "block",
              "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "lineHeight": "20px",
            }
          }
        >
          Cell (
          5 columns
           
          wide)
        </span>
        <br />
        <br />
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "display": "block",
              "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "lineHeight": "20px",
            }
          }
        >
          ⇠ Gutter
        </span>
        <br />
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "relative",
              "textAlign": "right",
              "zIndex": 0,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
              }
            }
          >
            Margin ⇢
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`wonder-blocks-grid example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "background": "#f7f8fa",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "center",
        "background": "#0a2a66",
        "borderBottom": "1px solid rgba(255,255,255,0.64)",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "height": 64,
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "center",
        "background": "#0a2a66",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "height": 136,
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "center",
        "background": "#ffffff",
        "borderBottom": "1px solid rgba(33,36,44,0.08)",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "height": 71,
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      Possible mastery points
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      Beginner / Points to Apprentice
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "center",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": "17px 0",
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.25 + 64px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      Skill Summary
      <hr />
      Intro to Geometry
      <hr />
      Angles
      <hr />
      Quiz 1: 10 questions
      <hr />
      Polygons
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.75 + 256px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.75 + 256px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.75 + 256px)",
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.75 + 256px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "background": "#ffffff",
            "border": "1px solid rgba(33,36,44,0.08)",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "height": 360,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 24,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        Intro to geometry
      </div>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "background": "#ffffff",
            "border": "1px solid rgba(33,36,44,0.08)",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "height": 360,
            "margin": 0,
            "marginTop": 16,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 24,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        Angles
      </div>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`wonder-blocks-grid example 3 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "background": "#21242c",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "center",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.08333333333333333 + 0px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": "5px 0",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      1
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`wonder-blocks-grid example 4 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "background": "#21242c",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "center",
        "background": "#ffffff",
        "border": "1px solid #ffb100",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": "16px 0",
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 5,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        Cell
      </span>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.5 + 160px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "height": 100,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 5,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        Cell
      </span>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`wonder-blocks-grid example 5 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "background": "#21242c",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "height": "400px",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "@media (minWidth: 1168px)": Object {
          "margin": "0 auto",
        },
        "alignItems": "stretch",
        "background": "#ffffff",
        "border": "1px solid #ffb100",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "height": "100%",
        "margin": 0,
        "maxWidth": 1168,
        "minHeight": 0,
        "minWidth": 0,
        "padding": "16px 0",
        "position": "relative",
        "width": "100%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.3333333333333333 + 96px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "overflowY": "auto",
          "padding": 5,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        Sidebar
      </span>
      <ul>
        <li>
          Chapter 1: Loomings
        </li>
        <li>
          Chapter 2: The Carpet-Bag
        </li>
        <li>
          Chapter 3: The Spouter-Inn
        </li>
        <li>
          Chapter 4: The Counterpane
        </li>
        <li>
          Chapter 5: Breakfast
        </li>
        <li>
          Chapter 6: The Street
        </li>
      </ul>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 32,
          "MsFlexPreferredSize": 32,
          "WebkitFlexBasis": 32,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 32,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 32,
          "zIndex": 0,
        }
      }
    />
    <div
      className=""
      style={
        Object {
          "MsFlexBasis": "calc((100% - 352px - 48px) * 0.6666666666666666 + 224px)",
          "MsFlexPreferredSize": "calc((100% - 352px - 48px) * 0.6666666666666666 + 224px)",
          "WebkitFlexBasis": "calc((100% - 352px - 48px) * 0.6666666666666666 + 224px)",
          "alignItems": "stretch",
          "background": "#ffb100",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "calc((100% - 352px - 48px) * 0.6666666666666666 + 224px)",
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "overflowY": "auto",
          "padding": 5,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <p
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "22px",
          }
        }
      >
        Call me Ishmael. Some years ago- never mind how long precisely- having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people's hats off- then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the ocean with me.
      </p>
      <p
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "display": "block",
            "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "lineHeight": "22px",
          }
        }
      >
        There now is your insular city of the Manhattoes, belted round by wharves as Indian isles by coral reefs- commerce surrounds it with her surf. Right and left, the streets take you waterward. Its extreme downtown is the battery, where that noble mole is washed by waves, and cooled by breezes, which a few hours previous were out of sight of land. Look at the crowds of water-gazers there.
      </p>
    </div>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 24,
          "MsFlexPreferredSize": 24,
          "WebkitFlexBasis": 24,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 24,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 24,
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;
